--- a/features/recurring-transactions.mdx
+++ b/features/recurring-transactions.mdx
@@ -137,4 +137,4 @@ Identify recurring income like:
 - Last occurrence must be within 45 days
 - Only detects patterns with consistent amounts
 - Projected transactions hidden when filters are applied
-- Manual identification required for new patterns (or wait for next sync)
+- Pattern detection is event-driven (runs after syncs or manual triggers), not continuous or real-time
