--- a/features/recurring-transactions.mdx
+++ b/features/recurring-transactions.mdx
@@ -75,6 +75,10 @@ Use the play/pause icon to manually activate or deactivate a recurring transacti
 
 Use the trash icon to permanently remove a recurring transaction record.
 
+#### Mark as recurring
+
+You can manually mark any individual transaction as recurring from the transaction detail view. Click **Mark as Recurring** to create a manual recurring transaction. The system automatically calculates amount variance from the past 6 months of similar transactions, allowing it to track recurring charges that vary in amount (like utility bills).
+
 ## Technical details
 
 ### Pattern clustering
