--- a/self-hosting-helm.mdx
+++ b/self-hosting-helm.mdx
@@ -33,19 +33,9 @@ helm repo add ot-helm https://ot-container-kit.github.io/helm-charts
 helm repo update
 ```
 
-### Download the Helm chart
+### Get the Helm chart
 
-Download the latest Helm chart from the [Sure releases page](https://github.com/we-promise/sure/releases):
-
-```bash
-# Download the latest chart archive
-curl -LO https://github.com/we-promise/sure/releases/latest/download/sure-helm-chart.tgz
-
-# Extract the chart
-tar -xzf sure-helm-chart.tgz
-```
-
-Alternatively, you can clone the repository and use the chart directly:
+Clone the Sure repository to access the Helm chart:
 
 ```bash
 git clone https://github.com/we-promise/sure.git
