Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: Quickstart
-description: Get started with Sure in minutes
+title: "Quickstart"
+description: "Get started with Sure in minutes"
 ---
 
 Get your Sure account up and running in three simple steps.
@@ -11,7 +11,8 @@ Navigate to [localhost:3000](http://localhost:3000) and click **Sign Up**. Compl
 
 ## 2. Add your first account
 
-Click **+ Add Account** and select an account type:
+Click **\+ Add Account** and select an account type:
+
 - **Cash** for checking/savings accounts
 - **Credit Card** for credit cards
 - **Investment** for brokerage accounts
@@ -21,7 +22,8 @@ Enter your account name and current balance, then click **Create Account**.
 
 ## 3. Record a transaction
 
-Go to **Transactions** in the sidebar and click **+ New Transaction**. Choose a type:
+Go to **Transactions** in the sidebar and click **\+ New Transaction**. Choose a type:
+
 - **Expense** for spending money
 - **Income** for receiving money
 - **Transfer** for moving money between accounts
@@ -62,6 +64,6 @@ rake demo_data:default
     Development setup guide for Windows
   </Card>
   <Card title="Dev containers" icon="container" href="https://code.visualstudio.com/docs/devcontainers/containers">
-    Use VS Code dev containers for isolated development
+    Use VS Code dev containers for isolated developmentt
   </Card>
 </CardGroup>
