--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,54 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: Introduction
+description: Sure is a personal finance app for everyone - track your accounts, transactions, and build wealth with complete control over your data
 ---
 
-## Setting up
+# Sure: The personal finance app for everyone
 
-Get your documentation site up and running in minutes.
+Sure is a fully-featured personal finance and wealth management app that you can self-host for free. Track your accounts, manage transactions, monitor investments, and take control of your financial future — all with complete ownership of your data.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+<CardGroup cols={2}>
+  <Card title="Quickstart" icon="rocket" href="/quickstart">
+    Get started with Sure in minutes
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Self-hosting" icon="server" href="/self-hosting">
+    Deploy Sure with Docker on your infrastructure
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Complete guide" icon="book-open" href="/guide">
+    Learn about all features and capabilities
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
+  <Card title="GitHub" icon="github" href="https://github.com/we-promise/sure">
+    View source code and contribute
   </Card>
-</Columns>
+</CardGroup>
 
-## Create beautiful pages
+## About Sure
 
-Everything you need to create world-class documentation.
+Sure is a community-maintained fork of the Maybe Finance project, which was open-sourced after the original team spent nearly $1 million building a comprehensive personal finance platform.
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+The app includes:
+- **Account management** - Track cash, credit cards, investments, and loans
+- **Transaction tracking** - Record expenses, income, and transfers
+- **Investment monitoring** - Monitor your portfolio and net worth
+- **Budget planning** - Set and track financial goals
+- **Data ownership** - Self-host with complete control over your data
 
-## Need inspiration?
+## Get involved
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<CardGroup cols={3}>
+  <Card title="Discord" icon="discord" href="https://discord.gg/36ZGBsxYEK">
+    Join our community
+  </Card>
+  <Card title="Website" icon="globe" href="https://sure.am">
+    Visit our website
+  </Card>
+  <Card title="Issues" icon="bug" href="https://github.com/we-promise/sure/issues">
+    Report bugs or request features
+  </Card>
+</CardGroup>
+
+## License
+
+Sure is distributed under the [AGPLv3 license](https://github.com/we-promise/sure/blob/main/LICENSE). You're free to fork, modify, and self-host the application.
+
+This project is a community fork of Maybe Finance and is **not affiliated with or endorsed by** Maybe Finance Inc. "Maybe" is a trademark of Maybe Finance Inc.
